objects/Account_Request__c/fields/Account_Link__c.field-meta.xml
<CustomField>
    <fullName>Account_Link__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>A link to the Account record that was created following approval of the Account Request</inlineHelpText>
    <label>Account Link</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Requests (Account Link)</relationshipLabel>
    <relationshipName>Account_Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>