objects/Account_Request__c/fields/Assign_to_Me__c.field-meta.xml
<CustomField>
    <fullName>Assign_to_Me__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Assign to Me</label>
    <type>Checkbox</type>
</CustomField>