objects/Account_Request__c/fields/BOA_Assigned_Date__c.field-meta.xml
<CustomField>
    <fullName>BOA_Assigned_Date__c</fullName>
    <description>Notes when this request was assigned</description>
    <inlineHelpText>Notes when this request was assigned</inlineHelpText>
    <label>BOA Assigned Date</label>
    <type>DateTime</type>
</CustomField>