objects/Account_Request__c/fields/Company_s_Website_URL__c.field-meta.xml
<CustomField>
    <fullName>Company_s_Website_URL__c</fullName>
    <label>Company&apos;s Website/URL</label>
    <type>Url</type>
</CustomField>