objects/Account_Request__c/fields/Geo__c.field-meta.xml
<CustomField>
    <fullName>Geo__c</fullName>
    <description>Picklist values managed through global value set. Corresponds to L2 values to simply rule creation and filtering.</description>
    <label>DEPRECATED Geo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Geo</valueSetName>
    </valueSet>
</CustomField>