objects/Account_Request__c/fields/HQ_City__c.field-meta.xml
<CustomField>
    <fullName>HQ_City__c</fullName>
    <label>HQ City</label>
    <length>32</length>
    <type>Text</type>
</CustomField>