objects/Account_Request__c/fields/Industry__c.field-meta.xml
<CustomField>
    <fullName>Industry__c</fullName>
    <label>Industry</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Agriculture, Mining &amp; Raw Materials</fullName>
            </value>
            <value>
                <fullName>Construction</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Energy, Utilities &amp; Waste</fullName>
            </value>
            <value>
                <fullName>Entertainment</fullName>
            </value>
            <value>
                <fullName>Facilities, Lodging &amp; Resorts</fullName>
            </value>
            <value>
                <fullName>Financial Services</fullName>
            </value>
            <value>
                <fullName>Government - Federal</fullName>
            </value>
            <value>
                <fullName>Government - Local</fullName>
            </value>
            <value>
                <fullName>Healthcare &amp; Life Sciences</fullName>
            </value>
            <value>
                <fullName>Holding Companies &amp; Conglomerates</fullName>
            </value>
            <value>
                <fullName>Hospitals &amp; Physicians Clinics</fullName>
            </value>
            <value>
                <fullName>Insurance</fullName>
            </value>
            <value>
                <fullName>Law Firms &amp; Legal Services</fullName>
            </value>
            <value>
                <fullName>Manufacturing, Construction &amp; Wholesale Trade</fullName>
            </value>
            <value>
                <fullName>Media &amp; Internet</fullName>
            </value>
            <value>
                <fullName>Media &amp; Telecommunications</fullName>
            </value>
            <value>
                <fullName>Non-Profit &amp; Charitable Organizations</fullName>
            </value>
            <value>
                <fullName>Professional &amp; Business Services</fullName>
            </value>
            <value>
                <fullName>Real Estate</fullName>
            </value>
            <value>
                <fullName>Retail &amp; Hospitality</fullName>
            </value>
            <value>
                <fullName>Software &amp; Technology</fullName>
            </value>
            <value>
                <fullName>Transportation Services</fullName>
            </value>
            <value>
                <fullName>Utilities</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>