objects/Account_Request__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This will be auto populated after request is submitted/saved.</inlineHelpText>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Account Requests</relationshipLabel>
    <relationshipName>Account_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>