objects/Account_Request__c/fields/Level_4_Region__c.field-meta.xml
<CustomField>
    <fullName>Level_4_Region__c</fullName>
    <formula>CreatedBy.Level_4__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DEPRECATED - Level 4 (Region)</label>
    <type>Text</type>
</CustomField>