objects/Account_Request__c/fields/Named_Account__c.field-meta.xml
<CustomField>
    <fullName>Named_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check box if account is a named account, default value is unchecked.</description>
    <label>Named Account</label>
    <type>Checkbox</type>
</CustomField>