objects/Account_Request__c/fields/Primary_PFS_Territory_Id__c.field-meta.xml
<CustomField>
    <fullName>Primary_PFS_Territory_Id__c</fullName>
    <description>Primary PFS Territory Id on Account, related to ETM. SS-10748</description>
    <inlineHelpText>Stores the Id of this Account&apos;s Primary PFS Territory. Managed by BOA.</inlineHelpText>
    <label>DEPRECATED Primary PFS Territory Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>