objects/Account_Request__c/fields/Primary_PFS_Territory_Name__c.field-meta.xml
<CustomField>
    <fullName>Primary_PFS_Territory_Name__c</fullName>
    <description>Primary PFS Territory Name on Account, related to ETM. SS-10748</description>
    <inlineHelpText>Stores the name of this Account&apos;s Primary PFS Territory. Managed by BOA.</inlineHelpText>
    <label>DEPRECATED Primary PFS Territory Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>