objects/Account_Request__c/fields/Primary_Sales_Territory_Id__c.field-meta.xml
<CustomField>
    <fullName>Primary_Sales_Territory_Id__c</fullName>
    <description>Used to store the Id of the Primary Sales Territory for Account. Managed by BOA.SS-10817</description>
    <label>DEPRECATED Primary Sales Territory Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>