objects/Account_Request__c/fields/Primary_Sales_Territory_Name__c.field-meta.xml
<CustomField>
    <fullName>Primary_Sales_Territory_Name__c</fullName>
    <description>Stores the name of this Account&apos;s Primary Sales Territory. Managed by BOA. SS-10817</description>
    <label>DEPRECATED Primary Sales Territory Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>