objects/Account_Request__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <description>Picklist values managed through global value set. Corresponds to L3 values to simply rule creation and filtering.</description>
    <label>DEPRECATED Region</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Geo__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Region</valueSetName>
    </valueSet>
</CustomField>