objects/Account_Request__c/fields/Sub_Region__c.field-meta.xml
<CustomField>
    <fullName>Sub_Region__c</fullName>
    <description>Picklist values managed through global value set. Corresponds to L4 values to simply rule creation and filtering.</description>
    <label>DEPRECATED Sub Region</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Region__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Sub_Region_L4</valueSetName>
    </valueSet>
</CustomField>