objects/Account_Request__c/validationRules/Primary_Sales_Territory_18Id.validationRule-meta.xml
<ValidationRule>
    <fullName>Primary_Sales_Territory_18Id</fullName>
    <active>true</active>
    <description>18 digit Id is required for Primary Sales Territory</description>
    <errorConditionFormula>AND(
LEN(Primary_Sales_Territory_Id__c) &lt;&gt; 18,
OR(
NOT(ISBLANK(Primary_Sales_Territory_Id__c)),
NOT(ISBLANK(Primary_Sales_Territory_Name__c)))
)</errorConditionFormula>
    <errorDisplayField>Primary_Sales_Territory_Id__c</errorDisplayField>
    <errorMessage>Sales Territory Id must be populated with the 18 digit record Id (not 15)</errorMessage>
</ValidationRule>