objects/Account_Request__c/validationRules/Primary_Sales_Territory_Name_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Primary_Sales_Territory_Name_Required</fullName>
    <active>true</active>
    <description>Primary Sales Territory Name is required when Primary Sales Territory Id is populated</description>
    <errorConditionFormula>AND(
NOT(ISBLANK(Primary_Sales_Territory_Id__c)),
ISBLANK(Primary_Sales_Territory_Name__c)
)</errorConditionFormula>
    <errorDisplayField>Primary_Sales_Territory_Name__c</errorDisplayField>
    <errorMessage>Primary Sales Territory Name must be populated</errorMessage>
</ValidationRule>