objects/Account_Request__c/validationRules/Provide_a_Denied_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>Provide_a_Denied_Reason</fullName>
    <active>true</active>
    <errorConditionFormula>AND (
ISPICKVAL(Request_Status__c, &quot;Denied&quot;),
ISBLANK(Denied_Reason__c)
)</errorConditionFormula>
    <errorMessage>If request is Denied please provide a reason.</errorMessage>
</ValidationRule>