objects/Account_Request__c/listViews/Account_Requests_All.listView-meta.xml
<ListView>
    <fullName>Account_Requests_All</fullName>
    <columns>NAME</columns>
    <columns>Request_Status__c</columns>
    <columns>Total_Addressable_Seats__c</columns>
    <columns>BOA_Assigned_Owner__c</columns>
    <columns>Account_Owner__c</columns>
    <columns>HQ_State__c</columns>
    <columns>HQ_Country__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>Account Requests - All</label>
</ListView>