objects/Account_Request__c/listViews/My_Account_Requests.listView-meta.xml
<ListView>
    <fullName>My_Account_Requests</fullName>
    <columns>NAME</columns>
    <columns>Request_Status__c</columns>
    <columns>Level_3_Sub_Area__c</columns>
    <columns>Level_4_Region__c</columns>
    <columns>Total_Addressable_Seats__c</columns>
    <columns>HQ_State__c</columns>
    <columns>HQ_Country__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Mine</filterScope>
    <label>My Account Requests</label>
</ListView>